@@ -4,5 +4,5 @@ template <int> struct A {};
 
 struct B : A<0>
 {
-  void foo() { this->A<0>; } // { dg-error "" }
+  void foo() { this->A<0>; } // { dg-error "invalid use" }
 };
